<resources>
    <string name="app_name">Shecare蓝牙SDKUIDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="warm_prompt">温馨提示</string>
    <string name="i_know">我知道了</string>
    <string name="write_permission">亲~要先打开存储权限哟~</string>
    <string name="paper_open_flashlight">打开闪光灯</string>
    <string name="paper_close_flashlight">关闭闪光灯</string>
    <string name="paper_in_container">请将完整试纸放入镜头内</string>
    <string name="clip_picture_zoom">放大缩小</string>
    <string name="clip_picture_rotate">旋转</string>
    <string name="paper_clip_text">温馨提示：可以通过以下操作调整图片到取景框中</string>
    <string name="paper_scan_notice">请务必保持试纸处在取景框内</string>
    <string name="scan_paper_notice">卡/笔形试纸？</string>
    <string name="dialog_paper_hint_str">请保持T、C线处于取景框内，并且T线位于左边；T、C线不必与示例对齐</string>
    <string name="left_margin">左边缘</string>
    <string name="right_margin">右边缘</string>
    <string name="ovulation_camera_tips"><![CDATA[为避免失效，孕橙试纸请在显色后%s分钟内拍照<br>其他试纸请参照相关说明进行拍照识别]]></string>
    <string name="format_font_79FA1E"><![CDATA[<font color="#79FA1E">%s</font>]]></string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="paper_clip_title">排卵试纸</string>
    <string name="smart_paper_result">智能检测结果</string>
    <string name="lh_photo">试纸照片</string>
    <string name="error_in_color_recognition">颜色识别有误差？</string>
    <string name="color_reference_bar_title_1">T线色值参考条:</string>
    <string name="color_reference_bar_title_2">T线色值参考条，拖动色卡修正结果！</string>
    <string name="lh_refer_result"><![CDATA[参考结果：<font color="#FF7486">%d</font>]]></string>
    <string name="lh_time2">检测时间</string>
    <string name="save">保存</string>
    <string name="photo">拍照</string>
    <string name="camera">从相册选择</string>
    <string name="paper">试纸识别</string>

    <string name="personal_my_device_bind">设备绑定</string>
    <string name="device_list">设备列表</string>
    <string name="shecare_thermometer">孕橙智能基础体温计</string>
    <string name="shecare_ewq">孕橙智能额温枪</string>
    <string name="shecare_txy">孕橙智能胎心仪</string>

    <string name="request_location_premisson">扫描蓝牙设备需要开启定位功能权限</string>
    <string name="location_service_turn_on">定位服务已开启</string>
    <string name="location_service_turn_off">定位服务未开启</string>
    <string name="request_location_premisson_tips">请打开手机蓝牙，否则无法连接体温计</string>
    <string name="binding">绑定中 ...</string>
    <string name="hardware_attached_unattach">该设备已被绑定过!请先解除绑定。</string>
    <string name="device_choose_toast">因为拒绝定位权限，您的硬件会无法连接蓝牙！以后需在设置里面自行开通该权限。</string>
    <string name="hardware_attached">该设备已被绑定过!请先解除绑定。</string>
    <string name="attach_success">绑定成功!</string>
    <string name="server_attach_error">绑定时请求服务器异常。</string>
    <string name="attach_fail">绑定失败!</string>
    <string name="sel_wrong_gen3">检测到您用的不是三代设备, 请选择正确的设备类型再绑定!</string>
    <string name="open_location_hint">安卓系统要求打开GPS</string>
    <string name="locaiton_server_hint">开启后才能扫描和连接体温计</string>
    <string name="open_location_server_success">位置服务已开启</string>
    <string name="open_locaiton_service_fail">位置服务未开启</string>
    <string name="temperture_conn_success">设备已连接</string>
    <string name="temperture_conn_fail">设备断开连接</string>
    <string name="no_new_temp">无最新温度</string>
    <string name="authorize">去授权</string>
    <string name="ok">确定</string>
    <string name="allright">好</string>
    <string name="understand">知道了</string>


    <string name="device_upate_tips">您的设备程序不是最新的，请点击“确定”更新设备程序！</string>
    <string name="firmware_update_title">设备正在升级程序</string>
    <string name="firmware_update_content">为了保证良好的蓝牙连接，请始终保持孕橙在屏幕显示，请不要关闭设备</string>
    <string name="oad">固件升级</string>
    <string name="oad_scan_str">请打开设备,正在扫描中...</string>
    <string name="oad_device_found">设备已扫描到,正在连接设备...</string>
    <string name="oad_check_ver">设备已连接,正在检测设备最新固件版本...</string>
    <string name="oad_disconnected">设备连接已断开!</string>
    <string name="get_firmver_fail">获取固件版本失败, 请检查网络!</string>
    <string name="oad_unSupported">检测您的固件版本为:%s,此版本不支持升级!</string>
    <string name="need_oad">发现新固件版本: %s,正在下载更新固件! </string>
    <string name="already_latest_ver">当前设备固件版本为:%s,已经是最新版本!</string>
    <string name="oad_start">开始固件升级</string>
    <string name="oading">正在固件升级...</string>
    <string name="oading_time">总时间: %d秒, 还剩下%d秒</string>
    <string name="oad_check_success">正在检查固件是否升级成功,请稍候...</string>
    <string name="oad_check_succ_g23">正在检查固件是否升级成功,请重启设备...</string>
    <string name="oad_suceess">固件升级成功!</string>
    <string name="oad_fail">固件升级失败!</string>
    <string name="macAddress">MAC 地址：</string>
    <string name="deviceVersion">版本号：</string>

    <string name="open_phone_bluetooth">手机蓝牙已打开</string>
    <string name="open_thermometer_switch">孕橙体温计开关已打开</string>
    <string name="continue_manual_add_thermomter">继续手动添加体温</string>
    <string name="connect_device">设备连接中</string>
    <string name="connect_device_success">设备连接成功</string>
    <string name="unconnect_device">设备未连接</string>
    <string name="connect_hint_1">设备连接缓慢?</string>
    <string name="connect_hint_2">1）重启体温计\n</string>
    <string name="connect_hint_3">2）确认体温计\n没有误进入历史模式</string>
    <string name="connect_hint_4">3）可能电量太低，\n换个电池试试</string>
    <string name="device_connect">设备连接</string>
    <string name="repeat_search">重新搜索</string>
    <string name="data_uploading">数据上传中</string>
    <string name="upload_complete">上传完毕</string>
    <string name="update_oad_hint_1">为了保证良好的蓝牙连接，请始终保持孕橙在屏幕显示，请不要关闭设备</string>
    <string name="wait_thermomter_data_uploading">数据上传中,请稍候</string>
    <string name="temperature_alert_1">数据检查完毕，未发现新增体温数据，现在就开始测温吧</string>
    <string name="temperature_alert_2"><![CDATA[体温计“嘀嘀”声后才算测温结束，测完后，也不要立即关机，以免数据丢失。]]></string>
    <string name="temperature_alert_3">体温数据传输完毕，共同步体温数据%d条。好习惯要保持，记得每天及时测量你的基础体温哦。</string>
    <string name="temperature_alert_4">体温数据传输完毕，共同步体温数据%d条，好习惯要保持。</string>
    <string name="temperature_alert_sub_4"><![CDATA[<font color="#FF6F8F">温馨提示:</font>最佳测温时间为早上醒来起身之前的一段时间还有每天尽量保持在同一时间测量哦。]]></string>
    <string name="temperature_alert_5">体温数据传输完毕，共同步体温数据%d条，还未检测到今日体温更新哦，最佳测温时间为早上醒来起身之前的一段时间。不要忘了测量今日体温哦。</string>
    <string name="temperature_alert_6">体温数据传输完毕，共同步体温数据%d条，还未检测到今日体温更新哦，最佳测温时间为早上醒来起身之前的一段时间。现在就开始测量今日体温吧。</string>
    <string name="temperature_alert_7">体温数据传输完毕，共同步体温数据%d条，还未检测到今日体温更新哦，现在就开始测量今日体温吧。</string>
    <string name="temperature_alert_sub_7"><![CDATA[<font color="#FF6F8F">温馨提示:</font>最佳测温时间为早上醒来起身之前的一段时间还有每天尽量保持在同一时间测量哦。]]></string>
    <string name="temperature_alert_8">收到%d条体温数据，请注意查看体温曲线。</string>
    <string name="format_font_ff7568"><![CDATA[<font color="#FF7486">%s</font>]]></string>

    <string name="toaday_temperature_title">今日体温</string>
    <string name="add_more_temperature_data">批量添加</string>
    <string name="auto_upload_temperature">体温计自动上传</string>
    <string name="add_temperature_select_time">选择时间：</string>
    <string name="add_temperature_bbt">基础体温：</string>
    <string name="add_valid_temperature_hint">孕橙无法帮你保存%s%s的体温,因为正常的体温范围为%s~%s%s</string>
    <string name="you_has_not_thermometer">还没有孕橙智能基础体温计？</string>
    <string name="buy_thermometer_introduce1">孕橙智能基础体温计，精准测温、自动绘图、永久储存</string>
    <string name="buy_thermometer_introduce2">，购买即赠送备孕教练服务</string>
    <string name="go_to_bind">已有，去绑定</string>
    <string name="go_to_buy">去购买</string>
    <string name="not_edit_future_time">不能编辑成未来时间</string>
    <string name="not_edit_past_time">不能编辑成过去时间</string>
</resources>
