<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/you_has_not_thermometer"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/buy_thermometer_introduce1"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/button_text_small_size_13" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/buy_thermometer_introduce2"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/button_text_small_size_13"
            android:visibility="gone"/>
    </LinearLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/binding_popup" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F8F8F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gotoBind"
                style="@style/DiaglogButtonStyle"
                android:text="@string/go_to_bind"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F8F8F8" />

            <TextView
                android:id="@+id/gotoBuy"
                style="@style/DiaglogButtonStyle"
                android:text="@string/go_to_buy"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
