<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <com.example.bledemo.view.AlphaImage
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/alert_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/titleContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/toaday_temperature_title"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/add_temperature_select_time"
                android:textColor="@color/color_444444"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/temperatureDateContentView"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temperatureDateContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="0 0 : 0 0 "
                    android:textColor="@color/color_444444"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/temperatureDateContent"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@+id/temperatureDateContent"
                    android:src="@drawable/add_temperature_arrow" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/add_temperature_bbt"
                android:textColor="@color/color_444444"
                android:textSize="16sp" />

            <com.example.bledemo.view.InputTemperatureLayout
                android:id="@+id/inputTemperatureLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/temperatureContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <com.example.bledemo.view.AutoEditText
                    android:id="@+id/et_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:enabled="false"
                    android:inputType="number"
                    android:textColor="@color/color_444444"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/temp_unit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/et_temp"
                    android:layout_alignBottom="@+id/et_temp"
                    android:layout_toEndOf="@+id/et_temp"
                    android:textColor="@color/color_444444"
                    android:textSize="16sp"
                    android:layout_marginBottom="1dp"/>
            </com.example.bledemo.view.InputTemperatureLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/addMoreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/add_more_temperature_data"
            android:textColor="@color/color_67A3FF" />

        <TextView
            android:id="@+id/errorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_5"
            android:textColor="#FF7F7F7F"
            android:textSize="12sp" />


        <Button
            android:id="@+id/operator"
            style="@style/commonButtonCornerStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/auto_upload_temperature" />
    </LinearLayout>

    <include
        android:id="@+id/keyBoardLayout"
        layout="@layout/layout_number_keyboard" />

</LinearLayout>